# TattoStudioApp

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  start.bat
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/middleware/: __init__.py  error_handler.py
backend/src/core/: config.py  container.py  errors.py  logging.py  responses.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: appointment_entity.py  artist_entity.py  cash_transaction_entity.py  client_entity.py  consent_entity.py  notification_entity.py  payment_entity.py  product_entity.py  user_entity.py
backend/src/domain/enums/: appointment_status.py  cash_transaction_type.py  client_source.py  consent_status.py  consent_type.py  image_rights.py  notification_channel.py  notification_status.py  notification_type.py  payment_status.py  payment_type.py  product_category.py  service_type.py  user_role.py
backend/src/domain/repositories/: appointment_repository.py  artist_repository.py  cash_repository.py  client_repository.py  consent_repository.py  notification_repository.py  payment_repository.py  product_repository.py  user_repository.py
backend/src/domain/services/: __init__.py  commission_calculator.py
backend/src/domain/value_objects/: __init__.py  date_range_vo.py  email_vo.py  money_vo.py
backend/src/infrastructure/security/: security_service.py
backend/src/infrastructure/tasks/: __init__.py  notification_tasks.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_appointment_handler.py  test_auth_handler.py  (+2 more)
(+177 files in other folders)
